--- a/the Ramachandran Plot/TheRamachandronPlot.ipynb
+++ b/the Ramachandran Plot/TheRamachandronPlot.ipynb
@@ -86,7 +86,7 @@
         "id": "lbUdjHKqw7sw"
       },
       "source": [
-        "ramachandran_plot(phi_psy(\"2MTY\", \"Determination_of _peptides/2MTY.pdb\"))"
+        "ramachandran_plot(phi_psy(\"2MTY\", \"Determination_of_peptides/2MTY.pdb\"))"
       ],
       "execution_count": null,
       "outputs": []
@@ -97,7 +97,7 @@
         "id": "LPMu89hh0GEV"
       },
       "source": [
-        "ramachandran_plot(phi_psy(\"3D9L\", \"Determination_of _peptides/3D9L.pdb\"))"
+        "ramachandran_plot(phi_psy(\"3D9L\", \"Determination_of_peptides/3D9L.pdb\"))"
       ],
       "execution_count": null,
       "outputs": []
@@ -108,7 +108,7 @@
         "id": "RmcIRtQ70OQM"
       },
       "source": [
-        "ramachandran_plot(phi_psy(\"3UXW\", \"Determination_of _peptides/3UXW.pdb\"))"
+        "ramachandran_plot(phi_psy(\"3UXW\", \"Determination_of_peptides/3UXW.pdb\"))"
       ],
       "execution_count": null,
       "outputs": []
