--- a/the Ramachandran Plot/TheRamachandronPlot.ipynb
+++ b/the Ramachandran Plot/TheRamachandronPlot.ipynb
@@ -35,10 +35,10 @@
         "id": "xe8Lswo58VAT"
       },
       "source": [
-        "def degrees(rad_angle):\n",
-        "    if rad_angle is None:\n",
+        "def degrees(angle):\n",
+        "    if angle is None:\n",
         "        return None\n",
-        "    return math.degrees(rad_angle)\n"
+        "    return math.degrees(angle)\n"
       ],
       "execution_count": 97,
       "outputs": []
