--- a/the Ramachandran Plot/TheRamachandronPlot.ipynb
+++ b/the Ramachandran Plot/TheRamachandronPlot.ipynb
@@ -72,7 +72,7 @@
       },
       "source": [
         "def ramachandran_plot(data):\n",
-        "    colors = ['#F08080', '#C71585','#008B8B', '#FFDAB9', '#0000CD', '#BC8F8F', '#F5F5F5', '#800000', '#2F4F4F', '#FFE4E1']\n",
+        "    colors = ['#F08080', '#C71585','#008B8B', '#FFDAB9']\n",
         "    patches = []\n",
         "    plt.clf()\n",
         "    for color_id, chain_id in enumerate(data.chain_id.unique()):\n",
